<resources>
  <string name="fir_token_beta">194a7a7976904a110a45f5a34a614323</string>
  <string name="fir_token_release">f60e7b4d8b237b271ef3a7741372f220</string>
  <string name="wechat_code">wx2beb386a0021ed3f</string>
  <string name="baidu_api">TDeYYG56GALnVbGcTYQCPyOe</string>
  <string name="baidu_api_debug">K95Se5Q3mxpxqxR93XCom9fS</string>
  <string name="oem">staff-qingcheng</string>
  <string name="qc_action">cn.qingchengfit.staffkit</string>
  <string name="oem_tag">staff-qingcheng</string>
  <string formatted="false" name="chat_user_id_header">qc_%s</string>
  <string name="gd_api">f4dad2850900bb268ab40748c90fb73f</string>
  <string name="separator">、</string>
  <string name="app_name">青橙健身管理</string>
  <string name="gym_label">场馆</string>
  <string name="action_settings">Settings</string>
  <string name="common_written">已填写</string>
  <string name="common_city">城市</string>
  <string name="common_address">详细地址</string>
  <string name="common_comfirm">确定</string>
  <string name="common_cancel">取消</string>
  <string name="common_complete">完成</string>
  <string name="common_name">名称</string>
  <string name="common_nextstep">下一步</string>
  <string name="common_time_length">时长</string>
  <string name="common_min">分钟</string>
  <string name="course_time_length">时长%s分钟</string>
  <string name="common_please_choose">请选择</string>
  <string name="common_please_write">请填写</string>
  <string name="common_un_setting">未设置</string>
  <string name="common_have_setting">已设置</string>
  <string name="common_wait">请稍后&#8230;</string>
  <string name="common_del">删除</string>
  <string name="mark">备注</string>
  <string name="start_day">开始日期</string>
  <string name="end_day">结束日期</string>
  <string name="name">姓名</string>
  <string name="gender">性别</string>
  <string name="phone">手机</string>
  <string name="type">类型</string>
  <string name="name_call">名称</string>
  <string name="instruction">说明</string>
  <string name="logout">退出登录</string>
  <string name="course_type_private">私教课</string>
  <string name="course_type_group">团课</string>
  <string name="no_limit">不限</string>
  <string name="edit">编辑</string>
  <string name="everyday">每天</string>
  <string name="everyweek">每周</string>
  <string name="everymonth">每月</string>
  <string name="attendance_private_course">私教</string>
  <string name="title_setting_gym">设置健身房</string>
  <string name="guide_write_gym_brand_hint">填写健身房品牌</string>
  <string name="guide_write_gym_venues_name">场馆名称</string>
  <string name="guide_write_gym_address">地址</string>
  <string name="guide_write_gym_phone">联系方式</string>
  <string name="guide_write_gym_descript">描述您的健身房</string>
  <string name="title_write_gym_descript">描述您的健身房</string>
  <string name="title_write_address">填写地址</string>
  <string name="title_choose_site">选择场地</string>
  <string name="title_add_new_site">添加新场地</string>
  <string name="title_choose_coach">选择教练</string>
  <string name="title_brand">添加健身房品牌</string>
  <string name="brand">品牌名</string>
  <string name="titile_manage_course">安排课程</string>
  <string name="course_picture">课程图片</string>
  <string name="course_type">课程类型</string>
  <string name="course_length">时长(分钟)</string>
  <string name="course_coach">课程教练</string>
  <string name="course_place">场地</string>
  <string name="course_account_type">结算方式</string>
  <string name="course_batch">课程排期</string>
  <string name="course_add_week_time">+课程周期</string>
  <string name="course_choose_coach">选择教练</string>
  <string name="course_add_new_coach">添加新教练</string>
  <string name="titie_set_account_type">设置结算方式</string>
  <string name="course_order_student_count">单节课可约人数</string>
  <string name="course_default_value_card">默认储值卡</string>
  <string name="course_default_time_card">默认次卡</string>
  <string name="course_default_year_card">默认年卡</string>
  <string name="course_default_place">默认场地</string>
  <string name="course_useable_card_type">可用会员卡种类</string>
  <string name="course_add_new_card_type">+添加会员卡种类</string>
  <string name="title_add_card_type">添加会员卡种类</string>
  <string name="title_gym_detail">健身房详情</string>
  <string name="guide_complete">恭喜您已经完成基本设置\n会员可以开始约课了</string>
  <string name="student_page_preview">会员端页面</string>
  <string name="guide_link_wechat">如何将会员页对接到微信公众账号?</string>
  <string name="gym_deadline">有效期至: </string>
  <string name="gym_renewal">续费</string>
  <string name="gym_outdate_promot">您的系统还有%d天过期</string>
  <string name="gym_renewal_contact">系统续费请联系:\n青橙科技  010&#8211;1234567</string>
  <string name="card_unit_value">(元/人)</string>
  <string name="card_unit_times">(次/人)</string>
  <string name="card_content_lable">1对%d单价</string>
  <string name="site_name">场地名称</string>
  <string name="site_count">可容纳人数</string>
  <string name="site_usage">场地用途</string>
  <string name="login_btn_label">登录</string>
  <string name="registe_indicat_label">注册</string>
  <string name="gender_male">男</string>
  <string name="gender_female">女</string>
  <string name="login_getcode">获取验证码</string>
  <string name="login_comfirm">确&#160;&#160;定</string>
  <string name="logint_phonenum_hint">手机号</string>
  <string name="login_checkcode_hint">手机验证码</string>
  <string name="login_password_hint">密码</string>
  <string name="login_err_no_account">请输入您的手机号码</string>
  <string name="login_err_no_checkcode">请输入验证码</string>
  <string name="login_resend_msg">%d秒后重新发送</string>
  <string name="header">头像</string>
  <string name="title_fix_self_info">编辑个人资料</string>
  <string name="label_username">用户名</string>
  <string name="fix_succees">修改成功</string>
  <string name="home_order_today">今日预约</string>
  <string name="home_order_tomorrow">明日预约</string>
  <string name="home_newadd_today">今日新增会员</string>
  <string name="home_fix_pw">修改密码</string>
  <string name="home_fix_phone">修改手机号</string>
  <string name="home_fix_checkin">签到/签出通知</string>
  <string name="home_fix_notify">消息推送设置</string>
  <string name="home_about_us">关于我们</string>
  <string name="home_report">意见反馈</string>
  <string name="home_share">分享给朋友</string>
  <string name="home_update">版本更新</string>
  <string name="statement_title">数据报表</string>
  <string name="statement_order">课程报表</string>
  <string name="statement_sale">销售报表</string>
  <string name="statement_signin">签到报表</string>
  <string name="statement_no_detail">无报表信息</string>
  <string name="statement_change_filter">更改筛选条件</string>
  <string name="statement_order_all">全部课程报表</string>
  <string name="search_hint">会员姓名/手机号</string>
  <string name="search_sms_hint">搜索短信内容/收件人</string>
  <string name="signin_record">签到记录</string>
  <string name="filter">筛选</string>
  <string name="signin_time">签到%d次</string>
  <string name="signin_chest">输入该会员使用的更衣柜号</string>
  <string name="signin_comfirm">确认签到</string>
  <string name="cardtype_all">全部类型</string>
  <string name="cardtype_value">储值类型</string>
  <string name="cardtype_times">次卡类型</string>
  <string name="cardtype_date">期限类型</string>
  <string  formatted="false" name="balance_card_total">(%s张)</string>
  <string name="cardtype_all_all">全部会员卡</string>
  <string name="all_cardtype_value">全部储值类型</string>
  <string name="all_cardtype_times">全部次卡类型</string>
  <string name="all_cardtype_date">全部期限类型</string>
  <string name="cardtype_del">删除该会员卡种类</string>
  <string name="title_cardtype_detail">会员卡种类详情</string>
  <string name="title_cardtype_add">添加会员卡种类</string>
  <string name="title_cardtype_edit">编辑会员卡种类</string>
  <string name="title_cardtype_edit_desc">编辑简介</string>
  <string name="cardtype_limit_total">共计可上</string>
  <string name="cardtype_limit_class">节课</string>
  <string name="real_income">实收</string>
  <string name="valid_date_count">有效期天数(天)</string>
  <string name="edit_intro">编辑说明</string>
  <string name="charge_value">充值(元)</string>
  <string name="charge_times">充值(次)</string>
  <string name="charge_day">充值(天)</string>
  <string name="alert_endtime_greater_starttime">结束时间不能早于开始时间</string>
  <string name="alert_batch_greater_three_month">课程排期时间不能超过三个月</string>
  <string name="choose_time">选择时间</string>
  <string name="choose_week">选择星期</string>
  <string name="pickerview_cancel">取消</string>
  <string name="pickerview_submit">确定</string>
  <string name="pickerview_year">年</string>
  <string name="pickerview_month">月</string>
  <string name="pickerview_day">日</string>
  <string name="pickerview_hours">时</string>
  <string name="pickerview_minutes">分</string>
  <string name="pickerview_seconds">秒</string>
  <string name="login_pw_again">确认登录密码</string>
  <string name="login_setpw">设置登录密码</string>
  <string name="login_checkcode">手机验证码</string>
  <string name="support_type">支持类型</string>
  <string name="title_add_card_standard">添加规格</string>
  <string name="student_name">会员卡名称</string>
  <string name="student_card_status">会员卡状态</string>
  <string name="student_card_status_all">全部状态</string>
  <string name="celar_filter">清除选项</string>
  <string name="filter_student_card">筛选会员卡</string>
  <string name="add_offday">+ 添加请假</string>
  <string name="studentcard_offday_record">会员卡请假记录</string>
  <string name="resume_card">恢复该会员卡</string>
  <string name="unregiste_card">停卡</string>
  <string name="spend_money">扣费</string>
  <string name="charge">充值</string>
  <string name="check_spend_list">查看消费记录</string>
  <string name="option_choose">选填</string>
  <string name="save">保存</string>
  <string name="common_i_konw">知道了</string>
  <string name="next_step">下一步</string>
  <string name="start_time">开始时间</string>
  <string name="end_time">结束时间</string>
  <string name="week1">星期一</string>
  <string name="week2">星期二</string>
  <string name="week3">星期三</string>
  <string name="week4">星期四</string>
  <string name="week5">星期五</string>
  <string name="week6">星期六</string>
  <string name="week7">星期日</string>
  <string name="every">每个</string>
  <string name="unit_yuan">元</string>
  <string name="unit_time">次</string>
  <string name="unit_day">天</string>
  <string name="wechat_scan">微信扫码支付</string>
  <string name="wechat_pay">微信支付</string>
  <string name="cash_pay">现金支付</string>
  <string name="credit_pay">刷卡支付</string>
  <string name="transit_pay">转账支付</string>
  <string name="other">其他</string>
  <string name="birthday">生日</string>
  <string name="address">地址</string>
  <string name="registe_date">注册日期</string>
  <string name="unregiste_title">是否确认停卡</string>
  <string name="unregiste_text">停卡后：\n1. 会员无法继续使用该会员卡；\n2. 默认列表不展示已停卡的会员卡；\n3. 停卡后可手动恢复会员卡；</string>
  <string name="unregiste_Comfirm">确认停卡</string>
  <string name="add_private_batch">+ 添加私教排期</string>
  <string name="add_group_batch">+ 添加团课排期</string>
  <string name="private_teacher_num">%d名私教</string>
  <string name="group_category_num">%d种私教</string>
  <string name="add_batch">+ 添加排期</string>
  <string name="belong_to_gyms">所属场馆</string>
  <string name="set_rest">设置休息</string>
  <string name="help_order_group">代约团课</string>
  <string name="help_order_private">代约私教</string>
  <string name="all_gyms">全部场馆</string>
  <string name="exit_double_click">双击退出</string>
  <string name="is_latest_version">已经是最新版本!</string>
  <string name="new_version">新版本</string>
  <string name="update">更新</string>
  <string name="next_time">下次</string>
  <string name="choose_gym">选择场馆</string>
  <string name="course">课程</string>
  <string name="coach">教练</string>
  <string name="student">会员</string>
  <string name="all_course">全部课程</string>
  <string name="all_students">全部学员</string>
  <string name="all_coach">全部教练</string>
  <string name="generate_statment">生成报表</string>
  <string name="trade_type">交易类型</string>
  <string name="cardtype">会员卡种类</string>
  <string name="pay_method">支付方式</string>
  <string name="all">全部</string>
  <string name="sale_menber">销售人员</string>
  <string name="add_zq_access_name">门禁名称</string>
  <string name="add_zq_gym_id">设备号</string>
  <string name="add_zq_find_equip">如何找到设备号？</string>
  <string name="add_zq_fun">功能</string>
  <string name="add_zq_sign_time">可签到时间</string>
  <string name="add_zq_sign_start">开始时间</string>
  <string name="add_zq_sign_end">结束时间</string>
</resources>