<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical"
    >

  <RelativeLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bg_grey"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Qc.toolbarStyle"
        app:popupTheme="@style/ToolbarStyle.Overflow"
        app:theme="@style/Qc.toolbarStyle"
        app:titleTextAppearance="@style/ToolbarStyle"
        >

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="报表筛选"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        tools:text="自定义报表"
        style="@style/Qc.TextCommonBlack"
        />
  </RelativeLayout>

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/start_day"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_clickable="true"
      app:civ_lable="@string/start_day"
      app:civ_showright="true"

      >
  </cn.qingchengfit.widgets.CommonInputView>

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/end_day"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_clickable="true"
      app:civ_lable="@string/end_day"
      app:civ_showright="true"

      >
  </cn.qingchengfit.widgets.CommonInputView>

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/card_type"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_clickable="true"
      app:civ_content="@string/cardtype_all"
      app:civ_lable="@string/cardtype"
      app:civ_showright="true"
      >
  </cn.qingchengfit.widgets.CommonInputView>

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/trade_type"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_clickable="true"
      app:civ_content="@string/no_limit"
      app:civ_lable="@string/trade_type"
      app:civ_showright="true"
      />

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/sale_menber"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_clickable="true"
      app:civ_content="@string/all"
      app:civ_lable="@string/sale_menber"
      app:civ_showright="true"
      />

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/pay_method"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_clickable="true"
      app:civ_content="@string/no_limit"
      app:civ_lable="@string/pay_method"
      app:civ_showright="true"
      />

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/student"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_clickable="true"
      app:civ_content="@string/all_students"
      app:civ_lable="@string/student"
      app:civ_showdivier="false"
      app:civ_showright="true"
      />

  <include layout="@layout/divider_grey"/>

  <Button
      android:id="@+id/custom_statment_generate"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      android:layout_margin="30dp"
      android:text="@string/generate_statment"
      />
</LinearLayout>
