<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:civ="http://schemas.android.com/apk/res-auto"
    xmlns:liv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical"
    >

  <include layout="@layout/common_toolbar"/>

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/name"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      civ:civ_lable="@string/name_call"
      civ:civ_showdivier="true"
      />

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/type"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      civ:civ_clickable="true"
      civ:civ_content="@string/cardtype_value"
      civ:civ_lable="@string/type"
      civ:civ_showdivier="true"
      />

  <cn.qingchengfit.staffkit.views.custom.LargeInputView
      android:id="@+id/instruction"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      liv:liv_lable="@string/instruction"

      />

  <Button
      android:id="@+id/comfirm"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_marginTop="20dp"
      android:enabled="false"
      android:text="@string/common_comfirm"
      />
</LinearLayout>