<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical"
    >

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/offday_reason"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_clickable="true"
      app:civ_hint="@string/common_please_write"
      app:civ_lable="请假事由"
      app:civ_nonnull="true"
      app:civ_showright="true"
      />

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/start_day"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_clickable="true"
      app:civ_hint="@string/common_please_write"
      app:civ_lable="@string/start_day"
      app:civ_nonnull="true"
      app:civ_showright="true"
      />

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/end_day"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_clickable="true"
      app:civ_hint="@string/common_please_write"
      app:civ_lable="@string/end_day"
      app:civ_nonnull="true"
      app:civ_showright="true"
      />

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/spend"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_hint="@string/common_please_write"
      app:civ_inputnum="true"
      app:civ_lable="收费(元)"
      app:civ_nonnull="true"

      />

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/mark"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      app:civ_clickable="true"
      app:civ_hint="@string/option_choose"
      app:civ_inputnum="true"
      app:civ_lable="@string/mark"
      app:civ_showdivier="false"
      app:civ_showright="true"
      />

  <include layout="@layout/divider_grey"/>

  <Button
      android:id="@+id/comfirm"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      android:layout_margin="@dimen/activity_horizontal_margin"
      android:enabled="false"
      android:text="@string/common_comfirm"
      />
</LinearLayout>